add headings and filler links to outline

--- a/index.html
+++ b/index.html
@@ -16,27 +16,29 @@
         </header>
 
         <main>
+            <section><img src="https://via.placeholder.com/800x50"></section>
             <section>
-                <img>
+                <h3>Introduction</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <span class="bold">Sondheim and Seurat.</span> Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </section>
             <section>
-                <img src="https://via.placeholder.com/400x300">
+                <h3>Sondheim</h3>
+                <img src="https://via.placeholder.com/300x300">
                 <p>
                    Labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
+                <li><a href="https://en.wikipedia.org/wiki/Whale_conservation">Music</a></li>
             </section>
             <section>
-                <img src="https://via.placeholder.com/400x300">
+                <h3>Seurat</h3>
+                <img src="https://via.placeholder.com/300x300">
                 <p>
                     Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
+                <li><a href="https://en.wikipedia.org/wiki/Whale_conservation">Life</a></li>
             </section>
-
-
-
         </main>
 
 
@@ -46,9 +48,6 @@
                 <li>Color</li>
                 <li>Light</li>
             </ul>
-
-            <p>email: sunday@light.com</p>
-
         </footer>
     </body>
 </html>
