update introduction text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <header>
             <h1>Sunday in the Park</h1>
+            <h3>exploring the artists</h3>
             <nav>
                 <ul>
                     <li>Home</li>
@@ -20,7 +21,7 @@
             <section>
                 <h3>Introduction</h3>
                 <p>
-                    <span class="bold">Sondheim and Seurat.</span> Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <span class="bold">Sondheim and Seurat.</span> Two artistic giants, two very different mediums. One used lyric and music, and one used color and light. Both had a profound impact on their respective niches in the art community, and their legacies are sure to indure for many years. One of Sondheim's greatest works is based on Seurat's most famous painting, "A Sunday Afternoon on the Island of La Grande Jatte." 
                 </p>
             </section>
             <section>
