add CSS to sunday

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Sunday in the Park</title>
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
         <header>
@@ -11,32 +12,32 @@
                 <ul>
                     <li><a href="https://peymade.github.io/sunday">Home</a></li>
                     <li><a href="https://medium.com/a-history-of-color/georges-seurat-art-and-color-theory-cca816c50f40">Color</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=kFQGkm2VFy4"></a>Music</li>
+                    <li><a href="https://www.youtube.com/watch?v=kFQGkm2VFy4">Music</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <section><img src="https://via.placeholder.com/800x50"></section>
-            <section>
+            <section id="lace" ><img id="top" src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Decorative-Elements-PNG/Border_Lace_PNG_Clip_Art.png"></section>
+            <section class="text">
                 <h3>Introduction</h3>
                 <p>
-                    <span class="bold">Sondheim and Seurat.</span> Two artistic giants, two very different mediums. One used lyric and music, and one used color and light. Both had a profound impact on their respective niches in the art community, and their legacies are sure to indure for many years. One of Sondheim's greatest works is based on Seurat's most famous painting, "A Sunday Afternoon on the Island of La Grande Jatte." 
+                    <b>Sondheim and Seurat.</b> Two artistic giants, two very different mediums. One used lyric and music, and one used color and light. Both had a profound impact on their respective niches in the art community, and their legacies are sure to indure for many years. So how are they connected? Sondheim's great work: "Sunday in the Park with George" is based on Seurat's most famous painting, "A Sunday Afternoon on the Island of La Grande Jatte," seen here in the background.
                 </p>
             </section>
-            <section>
+            <section class="text display sondheim">
                 <h3>Sondheim</h3>
-                <img src="https://via.placeholder.com/300x300">
+                <img class="portrait" src="https://upload.wikimedia.org/wikipedia/commons/4/42/Stephen_Sondheim_-_smoking.JPG">
                 <p>
-                   Labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                   Sunday in the Park with George is one of Sondheim's most beloved creations. The musical follows the life of the artist George Seurat, and includes a love story that, while not based entirely in truth, speculates on Seurat's relationship with the prominent figure in his famous painting. Sondheim uses lyrics and music to craft a musical that was nominated for 10 Tony Awards, and has endured as one of the most influential musicals ever. 
                 </p>
                 <li><a href="https://en.wikipedia.org/wiki/Stephen_Sondheim">Life</a></li>
             </section>
-            <section>
+            <section class="text display seurat">
                 <h3>Seurat</h3>
-                <img src="https://via.placeholder.com/300x300">
+                <img class="portrait" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Georges_Seurat_1888.jpg/1024px-Georges_Seurat_1888.jpg">
                 <p>
-                    Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    George Seurat's work 'A Sunday Afternoon on the Island of La Grande Jatte' was a revolutionary piece of work that used a technique called pointilism. In the mid-1800s this was not a popular way to paint, and Seurat's use of many dots to capture unique colors and ways that light hit objects was transformative and, like Sondheim's musical about Seurat, has continued to influence all kinds of art and artists. 
                 </p>
                 <li><a href="https://en.wikipedia.org/wiki/Georges_Seurat">Life</a></li>
             </section>
@@ -47,7 +48,7 @@
             <ul>
                 <li><a href="https://peymade.github.io/sunday">Home</a></li>
                 <li><a href="https://medium.com/a-history-of-color/georges-seurat-art-and-color-theory-cca816c50f40">Color</a></li>
-                <li><a href="https://www.youtube.com/watch?v=kFQGkm2VFy4"></a>Music</li>
+                <li><a href="https://www.youtube.com/watch?v=kFQGkm2VFy4">Music</a></li>
             </ul>
         </footer>
     </body>
