add JavaScript functionality

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <header>
+            <h4 id="date"><script src ="app2.js"></script></h4>
             <h1>Sunday in the Park</h1>
-            <h3>exploring the artists</h3>
+            <h2><script src ="app1.js"></script></h2>
+            <h3>let's explore the artists</h3>
             <nav>
                 <ul>
                     <li><a href="https://peymade.github.io/sunday">Home</a></li>
@@ -24,6 +26,9 @@
                 <p>
                     <b>Sondheim and Seurat.</b> Two artistic giants, two very different mediums. One used lyric and music, and one used color and light. Both had a profound impact on their respective niches in the art community, and their legacies are sure to indure for many years. So how are they connected? Sondheim's great work: "Sunday in the Park with George" is based on Seurat's most famous painting, "A Sunday Afternoon on the Island of La Grande Jatte," seen here in the background.
                 </p>
+                <button onclick="button()">Learn more</button>
+                <p id ="demo"></p>
+                <script src ="app3.js"></script>
             </section>
             <section class="text display sondheim">
                 <h3>Sondheim</h3>
