wrap JavaScript in functions

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <header>
-            <h4 id="date"><script src ="app2.js"></script></h4>
-            <h1>Sunday in the Park</h1>
             <h2><script src ="app1.js"></script></h2>
+            <h1>Sunday in the Park</h1>
             <h3>let's explore the artists</h3>
+            <script src ="app2.js"></script>
             <nav>
                 <ul>
                     <li><a href="https://peymade.github.io/sunday">Home</a></li>
